[feat] : CustomAuthenticationFilter 를 이용하여 인증과 로그인, JWT 토큰 발급

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,6 @@ logging.level.org.hibernate.type.descriptor.sql=trace
 spring.jpa.open-in-view=false
 
 spring.profiles.active=dev
+
+jwt.secret-key=aXRib29rLWF1dGgtanNvbndlYnRva2VuLXNlY3JldC1rZXkK
+jwt.expiration-time=3600
