--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,1 +1,3 @@
 spring.datasource.url=jdbc:mysql://133.186.151.141:3306/itbook_shop_dev?serverTimezone=UTC&characterEncoding=UTF-8
+
+itbook.shop-server=http://localhost:8082
