--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,1 +1,3 @@
 spring.datasource.url=jdbc:mysql://133.186.151.141:3306/itbook_shop_prod?serverTimezone=UTC&characterEncoding=UTF-8
+
+itbook.shop-server=http://133.186.152.177:8082
