--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,3 +1,8 @@
 spring.datasource.url=jdbc:mysql://133.186.151.141:3306/itbook_shop_dev?serverTimezone=UTC&characterEncoding=UTF-8
 
 itbook.shop-server=http://localhost:8082
+
+redis.host=133.186.151.141
+redis.port=6379
+redis.password=*N2vya7H@muDTwdNMR!
+redis.database=0
